--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         </div>
       </div>
       <div class="hero-image">
-        <img src="D:\All Website Work\portfolio\image\raj.jpg" alt="Developer illustration"/>
+        <img src="image/raj.jpg" alt="Developer illustration"/>
       </div>
     </div>
   </section>
@@ -286,7 +286,7 @@
       <h2 class="section-title fade-in">About Me</h2>
       <div class="about-container">
         <div class="about-image fade-in">
-          <img src="D:\All Website Work\portfolio\image\nitesh.jpg" alt="Nitesh at work"/>
+          <img src="image/nitesh.jpg" alt="Nitesh at work"/>
         </div>
         <div class="about-content fade-in delay-1">
           <h3>My Bio</h3>
@@ -884,4 +884,5 @@
     })();
   </script>
 </body>
+
 </html>
